Assign forced teams by role instead of individual UUID